--- a/src/components/video/Video.css
+++ b/src/components/video/Video.css
@@ -1,6 +1,6 @@
 .video-container {
     text-align: center;
-    margin: 20px 0;
+    margin-top: 100px;
   }
   
   .video-container iframe {
